[package]
name = "exodus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base32 = "0.4"
base64 = "0.20"
fast_qr = { version = "0.7.0", features = ["svg"] }
form_urlencoded = "1"
gloo = "0.8"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
js-sys = "0.3"
percent-encoding = "2"
prost = "0.11"
rqrr = "0.5"
url = "2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Clipboard", "DragEvent", "DataTransfer", "File", "Navigator", "Window"] }
yew = { version = "0.20.0", features = ["csr"] }

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
